--- a/todor/templates/auth/register.html
+++ b/todor/templates/auth/register.html
@@ -15,7 +15,7 @@
                                 <input type="text" name="username" id="username" class="form-control" required minlength="4" maxlength="20">
                             </div>
                             <div class="form-group">
-                                <label for="username">Contraseña</label>
+                                <label for="password">Contraseña</label>
                                 <input type="password" name="password" id="password" class="form-control" required minlength="4" maxlength="20">
                             </div>
                             <br>
