--- a/todor/templates/base.html
+++ b/todor/templates/base.html
@@ -15,17 +15,42 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
+              {% if g.user %}
+              <li class="nav-item">
+                <span class="nav-link" active > {{g.user.username}}</span>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('todo.index')}}">Tareas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.logout')}}">Cerrar sesion</a>
+              </li>
+              {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('auth.register')}}">Registrarse</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('auth.login')}}">Iniciar sesion</a>
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
       </nav>
     {% block content %} {% endblock%}
+
+    {% for message in get_flashed_messages() %}
+      <div class="container mt-3">
+        <div class="row">
+          <div class="col-md-6 mx-auto">
+            <div class="alert alert-danger" role="alert">
+              {{message}}
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
