añadida autenticacion y correccion de errores

--- a/todor/templates/todo/create.html
+++ b/todor/templates/todo/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section class="container-sm">
-    <h3 class="text-center mt-3 mb-3">{% block title %}Creacion de tarea{% endblock %}</h3>
+    <h3 class="text-center mt-3 mb-3">{% block title %}Ingresar Tarea{% endblock %}</h3>
     <form action="" method="post">
         <div class="form-group">
             <label for="title">Título</label>
@@ -20,7 +20,3 @@
     </form>
 </section>
 {% endblock %}
-
-<!-- 
-{{ url_for('todo.index') }} 
--->
