--- a/todor/templates/todo/update.html
+++ b/todor/templates/todo/update.html
@@ -2,21 +2,20 @@
 
 {% block content %}
 <section class="container-sm">
-    <h3 class="text-center mt-3 mb-3">{% block title %}Edicion de tarea{% endblock %}</h3>
+    <h3 class="text-center mt-3 mb-3">{% block title %}Editar Tarea{% endblock %}</h3>
     <form action="" method="post">
         <div class="form-group">
             <label for="title">Título</label>
-            <input type="text" class="form-control" id="title" name="title" required>
+            <input type="text" class="form-control" id="title" name="title" required value="{{ todo.title }}">
         </div>
         <div class="form-group">
             <label for="desc">Descripción</label>
-            <textarea class="form-control" id="desc" name="desc" rows="3"></textarea>
+            <textarea class="form-control" id="desc" name="desc" rows="3">{{ todo.desc }}</textarea>
         </div>
         <br>
         <div class="form-group">
-            <label for="desc">Completado</label>
-            <input class="form-check-input" type="checkbox" id="desc" name="desc" 
-                {%if todo.state == true%} checked {% endif %}>
+            <label for="state">Completado</label>
+            <input class="form-check-input" type="checkbox" name="state" id="state" {% if todo.state == true %} checked {% endif%}>
         </div>
         <br>
         <div class="text-center">
@@ -26,7 +25,3 @@
     </form>
 </section>
 {% endblock %}
-
-<!-- 
-{{ url_for('todo.index') }} 
--->
